# pytubepp-helper

./: .gitignore  CHANGELOG.md  README.md  copyFiles.aarch64-apple-darwin.js  copyFiles.js  copyFiles.x86_64-apple-darwin.js  index.html  makeFilesExecutable.js  package-lock.json  package.json  signFiles.js  vite.config.ts
.github/workflows/: publish.yml  release.yml
linux/: package-lock.json  package.json  tailwind.config.js
linux/src/: App.tsx  types.ts
linux/src-tauri/: Cargo.toml  tauri.conf.json
linux/src-tauri/autostart/: Cargo.toml  pytubepp-helper-autostart.desktop
linux/src-tauri/icons/: icon.icns
linux/src-tauri/msghost/: Cargo.toml
linux/src-tauri/msghost-manifest/chrome/: com.neosubhamoy.pytubepp.helper.json
linux/src-tauri/msghost/src/: main.rs
linux/src-tauri/src/: main.rs
linux/src/lib/: utils.ts
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  pytubepp-helper-msghost-moz.json  pytubepp-helper-msghost.json  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/autostart/: Cargo.toml  build.rs  pytubepp-helper-autostart.desktop  pytubepp-helper-autostart.plist
src-tauri/autostart/src/: main.rs
src-tauri/capabilities/: default.json  shell.json
src-tauri/icons/: icon.icns
src-tauri/installer/windows/: nsis-hooks.nsi  nsis-template.nsi  wix-fragment-registry.wxs  wix-fragment.wxs
src-tauri/msghost/: Cargo.toml
src-tauri/msghost-manifest/linux/firefox/: com.neosubhamoy.pytubepp.helper.json
src-tauri/msghost-manifest/macos/chrome/: com.neosubhamoy.pytubepp.helper.json
src-tauri/msghost-manifest/macos/firefox/: com.neosubhamoy.pytubepp.helper.json
src-tauri/msghost-manifest/windows/chrome/: com.neosubhamoy.pytubepp.helper.json
src-tauri/msghost/src/: config.rs  main.rs
src-tauri/src/: config.rs  lib.rs  main.rs
src/components/ui/: card.tsx  notification-badge.tsx  progress.tsx
src/lib/: platform-utils.ts  utils.ts
src/pages/: extension-manager.tsx  home.tsx  notifications.tsx  settings.tsx
windows/: .gitignore  package.json
windows/src/: App.tsx  types.ts
windows/src-tauri/: tauri.conf.json
windows/src-tauri/installer/windows/: nsis-template.nsi
windows/src-tauri/src/: main.rs
windows/src/lib/: utils.ts
