[package]
name = "pytubepp-helper"
version = "0.7.0"
description = "PytubePP Helper"
authors = ["neosubhamoy"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
directories = "5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.39.2", features = ["full"] }
tokio-tungstenite = "*"
futures-util = "0.3.30"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-http = "2"
tauri-plugin-upload = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "pytubepp_helper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[workspace]
members = [
  ".",
  "msghost"
]
