[package]
name = "pytubepp-helper-autostart"
version = "0.1.0"
description = "PytubePP Helper (Autostart)"
authors = ["neosubhamoy <hey@neosubhamoy.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket = "0.27.1"
serde_json = "1.0"