[package]
name = "pytubepp-helper-msghost"
version = "0.1.0"
description = "PytubePP Helper Native Messaging Host"
authors = ["neosubhamoy"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket = "0.27.1"
serde_json = "1.0"

[build-dependencies]
winresource = "0.1.17"