[package]
name = "pytubepp-helper-msghost"
version = "0.1.0"
description = "PytubePP Helper Native Messaging Host"
authors = ["neosubhamoy <hey@neosubhamoy.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket = "0.27.1"
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"